--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,6 +67,16 @@
             </a>
           </li>
           {% endif %}
+          {% if site.youtube %}
+          <li class="list-inline-item">
+            <a href="https://www.youtube.com/c/{{ site.youtube }}">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-youtube fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}          
           {% if site.instagram_username %}
           <li class="list-inline-item">
             <a href="https://instagram.com/{{ site.instagram_username }}">
