--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,7 +18,9 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
+          <a class="nav-link" href="{{"/projects" | relative_url }}">Projects</a>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a> -->
         </li>
       </ul>
     </div>
