--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/taewoon-kim-cv.pdf">CV</a>
+        </li>
       </ul>
     </div>
   </div>
